<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="0dp"
                          android:layout_weight="1"
                          android:gravity="center"
                          android:orientation="vertical"
                          app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                          android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonNext"
                          app:layout_constraintTop_toTopOf="parent">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/one_last_step"
                          android:layout_marginTop="16dp"
                          android:textSize="36sp"
                          style="@style/TextTitleStyleBold"
                          android:gravity="center"/>

                <TextView android:layout_width="match_parent"
                          android:textColor="@android:color/black"
                          android:gravity="center"
                          style="@style/TextTitleStyleBold"
                          android:layout_marginTop="12dp"
                          android:textSize="16sp"
                          android:text="@string/keep_platform"
                          android:layout_height="wrap_content"/>

            <include layout="@layout/common_recyclerview"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                    android:layout_marginBottom="16dp"
                    android:text="@string/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonNext"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>