<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:id="@+id/linearLayout2">


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/frame_bg"
                android:layout_height="match_parent">


            <TextView
                    android:text="@string/category"
                    style="@style/TextTitleStyleBold"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp" android:id="@+id/textView6"/>
            <com.google.android.material.button.MaterialButton
                    android:text="@string/academic"
                    android:layout_width="0dp"
                    android:textSize="20sp"
                    app:cornerRadius="14dp"

                    android:textAllCaps="true"
                    app:strokeColor="@color/colorStock"
                    app:strokeWidth="1dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/colorText"
                    style="@style/ButtonStyle"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonAcademics" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
            />
            <com.google.android.material.button.MaterialButton
                    android:text="@string/hobbies"
                    android:layout_width="0dp"
                    android:theme="@style/ButtonStyle"
                    android:textSize="20sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:cornerRadius="10dp"
                    app:strokeColor="@color/colorStock"
                    app:strokeWidth="1dp"
                    android:textColor="@color/colorText"
                    style="@style/ButtonStyle"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonHobbies" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/buttonAcademics"
                    app:layout_constraintEnd_toEndOf="@+id/buttonAcademics"
                    app:layout_constraintStart_toStartOf="@+id/buttonAcademics"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>